--- a/package.json
+++ b/package.json
@@ -12,11 +12,11 @@
   "license": "ISC",
   "dependencies": {
     "cors": "^2.8.5",
+    "dotenv": "^16.0.0",
     "express": "^4.17.2",
-    "mongoose": "^6.1.9",
-    "nodemon": "^2.0.15"
+    "mongoose": "^6.1.9"
   },
   "devDependencies": {
-    "dotenv": "^15.0.0"
+    "nodemon": "^2.0.15"
   }
 }
